A few changes to Analysis.ipynb.
Slight re-organisation
Naming the index of the data
Save the processed qotw.csv to the output

--- a/analyse_qotw/Analysis.ipynb
+++ b/analyse_qotw/Analysis.ipynb
@@ -48,8 +48,7 @@
     "data = pd.read_csv(INPUT_FILE_NAME)\n",
     "data[WEIGHTED] = data[NUMERATOR]/data[DENOMINATOR]\n",
     "data[DATE] = pd.to_datetime(data[DATE], format='%Y-%m-%d')\n",
-    "\n",
-    "groups = data.groupby(by=DENOMINATOR)"
+    "data.index.names = ['id']"
    ]
   },
   {
@@ -59,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "groups = data.groupby(by=DENOMINATOR)\n",
     "scatter = plt.figure(1, figsize=(50, 20))\n",
     "plt.scatter(data[DATE], data[WEIGHTED])\n",
     "cols = groups.indices\n",
@@ -102,7 +102,9 @@
    "id": "37a4b958",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv('../output/qotw.csv')"
+   ]
   }
  ],
  "metadata": {
