--- a/analyse_qotw/Analysis.ipynb
+++ b/analyse_qotw/Analysis.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -69,6 +70,20 @@
     "    plt.scatter(group[DATE], group[NUMERATOR])\n",
     "analysis = analysis.transpose()\n",
     "analysis.index.names = ['denominator']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58f54944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    os.mkdir('../output/')\n",
+    "except FileExistsError:\n",
+    "    # Do nothing, the output directory already exists\n",
+    "    pass"
    ]
   },
   {
