Moves the qotw.csv data into its own directory.

--- a/analyse_qotw/Analysis.ipynb
+++ b/analyse_qotw/Analysis.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# File name\n",
-    "INPUT_FILE_NAME = 'qotw.csv'\n",
+    "INPUT_FILE_NAME = '../data/qotw.csv'\n",
     "\n",
     "# Existing columns\n",
     "DATE = 'date'\n",
